Changelog
=========


1.1.1 (unreleased)
------------------

- Don't use IDNormalizer for Mail. It handles Umlauts weird.
  [tschanzt]


1.1.0 (2013-09-13)
------------------

- Add groups builder.
  [jone]

- Add users builder.
  [jone]

- Added modification date setter for PloneObject Builders.
  [phgross]


1.0.0 (2013-08-12)
------------------

- Added dexterity support.
  [phgross]

- Initial implementation
  [jone]